--- a/index.html
+++ b/index.html
@@ -190,6 +190,26 @@
         color: #FFFFFF;
       }
 
+      footer {
+        position: absolute;
+        z-index: 10;
+        top: 10px;
+        right: 10px;
+        font: 1rem/1.4 -apple-system, BlinkMacSystemFont,
+        Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans,
+        Droid Sans, Helvetica Neue, sans-serif;
+      }
+
+      footer a {
+        color: #FFFFFF;
+        text-decoration: none;
+      }
+
+      footer a:hover {
+        text-decoration: underline;
+      }
+
       #left
     </style>
   </head>
@@ -203,6 +223,10 @@
       <div id="lives-display">Lives:</div>
     </div>
     <div id="right-banner"></div>
+
+    <footer>
+      <a href="https://github.com/toji/spookyball">SpookyBall is open source!</a>
+    </footer>
     
 
     <script type="importmap">
