More WGSL syntax updates and converted to using the public version of wgsl-preprocessor

--- a/index.html
+++ b/index.html
@@ -228,13 +228,14 @@
     <footer>
       <a href="https://github.com/toji/spookyball">SpookyBall is open source!</a>
     </footer>
-    
+
 
     <script type="importmap">
     {
         "imports": {
             "gl-matrix": "./node_modules/gl-matrix/esm/index.js",
             "webgpu-texture-loader": "./node_modules/web-texture-tool/build/webgpu-texture-loader.js",
+            "wgsl-preprocessor": "./node_modules/wgsl-preprocessor/wgsl-preprocessor.js",
             "dat.gui": "./node_modules/dat.gui/build/dat.gui.module.js",
             "stats.js": "./node_modules/stats.js/src/Stats.js"
         }
