--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         display: block;
         width: 100%;
         height: 100%;
+        touch-action: none;
       }
 
       @media (max-aspect-ratio: 3/4) {
@@ -144,6 +145,7 @@
         transition-property: opacity, transform;
         transition-duration: 1s;
         transition-timing-function: ease-out;
+        pointer-events: none;
       }
 
       #level-title.show {
@@ -178,6 +180,7 @@
 
       #replay-button.show {
         display: block;
+        pointer-events: none;
       }
 
       #lives-display {
@@ -189,6 +192,7 @@
         font-size: 2em;
         font-family: 'Creepster', cursive;
         color: #FFFFFF;
+        pointer-events: none;
       }
 
       footer {
