--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel='icon' type='image/png' sizes='32x32' href='media/images/icon-32.png'>
     <link rel='icon' type='image/png' sizes='96x96' href='media/images/icon-96.png'>
 
+    <script defer src="https://web3dsurvey.com/collector.js"></script>
+
     <title>SpookyBall!</title>
 
     <style>
