--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       #replay-button.show {
         display: block;
-        pointer-events: none;
+        pointer-events: auto;
       }
 
       #lives-display {
